update follow acct

--- a/CFFollowingWPF/CFFollowingWPF.csproj
+++ b/CFFollowingWPF/CFFollowingWPF.csproj
@@ -62,6 +62,9 @@
     <Compile Include="Views\BetAccount.xaml.cs">
       <DependentUpon>BetAccount.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\FollowAccount.xaml.cs">
+      <DependentUpon>FollowAccount.xaml</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -84,6 +87,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\BetAccount.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\FollowAccount.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
